--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,19 +17,41 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18]
     steps:
-      - name: Checkout your repository using git
-        uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-        with:
-          version: latest
-      - name: Install, build, and upload your site
-        uses: withastro/action@v0
-        with:
-            # path: . # The root location of your Astro project inside the repository. (optional)
-            # node-version: 16 # The specific version of Node that should be used to build your site. Defaults to 16. (optional)
-            package-manager: pnpm # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+    - uses: actions/checkout@v3
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'pnpm'
+    - name: Install, build, and upload your site
+      uses: withastro/action@v0
+      with:
+          # path: . # The root location of your Astro project inside the repository. (optional)
+          # node-version: 16 # The specific version of Node that should be used to build your site. Defaults to 16. (optional)
+          package-manager: pnpm # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
 
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout your repository using git
+  #       uses: actions/checkout@v3
+  #     - uses: pnpm/action-setup@v2
+  #       with:
+  #         version: latest
+      # - name: Install, build, and upload your site
+      #   uses: withastro/action@v0
+      #   with:
+      #       # path: . # The root location of your Astro project inside the repository. (optional)
+      #       # node-version: 16 # The specific version of Node that should be used to build your site. Defaults to 16. (optional)
+      #       package-manager: pnpm # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+      #
   deploy:
     needs: build
     runs-on: ubuntu-latest
