--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-	"name": "astro-cactus",
-	"version": "3.2.0",
-	"private": false,
+	"name": "nerd",
+	"private": true,
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
@@ -11,46 +10,46 @@
 		"format": "prettier -w --cache ."
 	},
 	"devDependencies": {
-		"@pagefind/default-ui": "^0.12.0",
-		"@resvg/resvg-js": "^2.4.1",
+		"@pagefind/default-ui": "^1.0.4",
+		"@resvg/resvg-js": "^2.6.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.10",
-		"@types/eslint": "^8.44.2",
-		"@typescript-eslint/eslint-plugin": "^6.7.0",
-		"@typescript-eslint/parser": "^6.7.0",
-		"astro-eslint-parser": "^0.15.0",
-		"autoprefixer": "^10.4.15",
-		"eslint": "^8.49.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-import-resolver-typescript": "^3.6.0",
-		"eslint-plugin-astro": "^0.29.0",
-		"eslint-plugin-import": "^2.28.1",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-prettier": "^5.0.0",
+		"@types/eslint": "^8.44.8",
+		"@typescript-eslint/eslint-plugin": "^6.13.2",
+		"@typescript-eslint/parser": "^6.13.2",
+		"astro-eslint-parser": "^0.16.0",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.55.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-astro": "^0.30.0",
+		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-jsx-a11y": "^6.8.0",
+		"eslint-plugin-prettier": "^5.0.1",
 		"mdast-util-to-string": "^4.0.0",
-		"pagefind": "^0.12.0",
-		"postcss": "^8.4.29",
+		"pagefind": "^1.0.4",
+		"postcss": "^8.4.32",
 		"postcss-html": "^1.5.0",
 		"postcss-import": "^15.1.0",
-		"prettier": "^3.0.3",
-		"prettier-plugin-astro": "0.12.0",
-		"prettier-plugin-tailwindcss": "^0.5.4",
+		"prettier": "^3.1.0",
+		"prettier-plugin-astro": "0.12.2",
+		"prettier-plugin-tailwindcss": "^0.5.9",
 		"reading-time": "^1.5.0",
-		"remark-unwrap-images": "^3.0.1",
-		"tailwindcss": "^3.3.3",
-		"typescript": "^5.2.2"
+		"remark-unwrap-images": "^4.0.0",
+		"tailwindcss": "^3.3.6",
+		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"@astrojs/mdx": "^1.0.3",
-		"@astrojs/prefetch": "^0.4.0",
-		"@astrojs/rss": "^3.0.0",
-		"@astrojs/sitemap": "^3.0.0",
-		"@astrojs/tailwind": "^5.0.0",
-		"astro": "3.0.13",
-		"astro-icon": "^0.8.1",
-		"satori": "0.10.4",
+		"@astrojs/mdx": "^2.0.0",
+		"@astrojs/prefetch": "^0.4.1",
+		"@astrojs/rss": "^4.0.1",
+		"@astrojs/sitemap": "^3.0.3",
+		"@astrojs/tailwind": "^5.0.3",
+		"astro": "4.0.3",
+		"astro-icon": "^0.8.2",
+		"satori": "0.10.11",
 		"satori-html": "^0.3.2",
-		"sharp": "^0.32.5"
+		"sharp": "^0.33.0"
 	},
 	"packageManager": "pnpm@8.6.1"
 }
